--- a/Web.config
+++ b/Web.config
@@ -1,9 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="VoxPopuliConnectionString" connectionString="Data Source=LAPTOP-LPSPJ332\SQLEXPRESS;Initial Catalog=VoxPopuli;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="VoxPopuliConnectionString2" connectionString="Data Source=LAPTOP-LPSPJ332\SQLEXPRESS;Initial Catalog=VoxPopuli;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
