Added a picture amoung others

--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
+    <Folder Include="Images\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
