creation of local website database, script to add data in congressmem.sql

--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -101,6 +101,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\congressmem.sql" />
+    <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
+    </Content>
     <Content Include="CSS\MainPage.css" />
     <Content Include="CSS\sidebar.css" />
     <Content Include="Districts\TexasD1.txt" />
@@ -139,7 +144,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
