--- a/Web.config
+++ b/Web.config
@@ -7,6 +7,8 @@
   <connectionStrings>
     <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="masterConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
