--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -107,6 +107,7 @@
     <Content Include="Global.asax" />
     <Content Include="JavaScript\leaflet-sidebar.js" />
     <Content Include="JavaScript\MainPageMap.js" />
+    <Content Include="Photos\30-307416_profile-icon-png-image-free-download-searchpng-employee.png" />
     <Content Include="VoxPopuliMap_Version1.0.html" />
     <Content Include="Web.config" />
     <Content Include="WebPages\MainPage.aspx" />
