added php files for ajax implementation getbill, ajax, get pic, get congress in javascript folder for some reason

--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -110,6 +110,10 @@
     <Content Include="CSS\sidebar.css" />
     <Content Include="Districts\TexasD1.txt" />
     <Content Include="Global.asax" />
+    <Content Include="JavaScript\getBill.php" />
+    <Content Include="JavaScript\getPic.php" />
+    <Content Include="JavaScript\getCongress.php" />
+    <Content Include="JavaScript\ajax.php" />
     <Content Include="JavaScript\jquery-3.6.0.min.js" />
     <Content Include="JavaScript\leaflet-sidebar.js" />
     <Content Include="JavaScript\MainPageMap.js" />
