--- a/Web.config
+++ b/Web.config
@@ -9,6 +9,8 @@
       providerName="System.Data.SqlClient" />
     <add name="masterConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="masterConnectionString2" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=master;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
