Registration Page Functionality. Everythign done except for Insert statement. Also needing to be wrapped up in bootsrap css

--- a/Web.config
+++ b/Web.config
@@ -9,6 +9,8 @@
       providerName="System.Data.SqlClient" />
     <add name="VoxPopuliConnectionString2" connectionString="Data Source=LAPTOP-LPSPJ332\SQLEXPRESS;Initial Catalog=VoxPopuli;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="VoxPopuli_ConnectionString" connectionString="Data Source=LAPTOP-LPSPJ332\SQLEXPRESS;Initial Catalog=VoxPopuli;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
