--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -111,6 +111,7 @@
     <Content Include="VoxPopuliMap_Version1.0.html" />
     <Content Include="Web.config" />
     <Content Include="WebPages\MainPage.aspx" />
+    <Content Include="WebPages\Register.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -125,6 +126,13 @@
     </Compile>
     <Compile Include="WebPages\MainPage.aspx.designer.cs">
       <DependentUpon>MainPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\Register.aspx.cs">
+      <DependentUpon>Register.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\Register.aspx.designer.cs">
+      <DependentUpon>Register.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
