--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -45,6 +45,9 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web.Cors, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.AspNet.Cors.5.2.7\lib\net45\System.Web.Cors.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -54,6 +57,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Http.Cors, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.AspNet.WebApi.Cors.5.2.7\lib\net45\System.Web.Http.Cors.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -110,10 +116,10 @@
     <Content Include="CSS\sidebar.css" />
     <Content Include="Districts\TexasD1.txt" />
     <Content Include="Global.asax" />
-    <Content Include="JavaScript\getBill.php" />
-    <Content Include="JavaScript\getPic.php" />
-    <Content Include="JavaScript\getCongress.php" />
-    <Content Include="JavaScript\ajax.php" />
+    <Content Include="WebPages\getBill.php" />
+    <Content Include="WebPages\getPic.php" />
+    <Content Include="WebPages\getCongress.php" />
+    <Content Include="WebPages\ajax.php" />
     <Content Include="JavaScript\jquery-3.6.0.min.js" />
     <Content Include="JavaScript\leaflet-sidebar.js" />
     <Content Include="JavaScript\MainPageMap.js" />
