--- a/Web.config
+++ b/Web.config
@@ -1,16 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="masterConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="masterConnectionString2" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=master;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="masterConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="masterConnectionString2" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=master;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
