--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -103,6 +103,7 @@
   <ItemGroup>
     <Content Include="CSS\MainPage.css" />
     <Content Include="CSS\sidebar.css" />
+    <Content Include="CSS\Register.css" />
     <Content Include="Districts\TexasD1.txt" />
     <Content Include="Global.asax" />
     <Content Include="JavaScript\leaflet-sidebar.js" />
@@ -110,8 +111,10 @@
     <Content Include="Photos\30-307416_profile-icon-png-image-free-download-searchpng-employee.png" />
     <Content Include="VoxPopuliMap_Version1.0.html" />
     <Content Include="Web.config" />
+    <Content Include="WebPages\Login.aspx" />
     <Content Include="WebPages\MainPage.aspx" />
     <Content Include="WebPages\Register.aspx" />
+    <Content Include="WebPages\TXDistrict1.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -120,6 +123,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebPages\Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
     <Compile Include="WebPages\MainPage.aspx.cs">
       <DependentUpon>MainPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -133,6 +143,13 @@
     </Compile>
     <Compile Include="WebPages\Register.aspx.designer.cs">
       <DependentUpon>Register.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TXDistrict1.aspx.cs">
+      <DependentUpon>TXDistrict1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TXDistrict1.aspx.designer.cs">
+      <DependentUpon>TXDistrict1.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
