--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -105,11 +105,11 @@
     <Content Include="CSS\RepPage.css" />
     <Content Include="CSS\sidebar.css" />
     <Content Include="CSS\Register.css" />
+    <Content Include="DB\ScriptofVoxPopuliv2.sql" />
     <Content Include="Districts\TexasD1.txt" />
     <Content Include="Global.asax" />
     <Content Include="JavaScript\leaflet-sidebar.js" />
     <Content Include="JavaScript\MainPageMap.js" />
-    <Content Include="Photos\border-image.png" />
     <Content Include="Photos\default_picture.png" />
     <Content Include="VoxPopuliMap_Version1.0.html" />
     <Content Include="Web.config" />
