Added Captcha Validation Logic to Registration Page

--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -126,7 +126,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReCaptchaClass.cs" />
+    <Compile Include="ReCaptcha.cs" />
     <Compile Include="WebPages\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
