--- a/Web.config
+++ b/Web.config
@@ -18,6 +18,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Google.ReCaptcha.Secret" value="6Lc-4xQdAAAAADYb61HRSmFwU-XEnoHwxQoNWdtt" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
