--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -131,9 +131,8 @@
     <Content Include="JavaScript\jquery-3.6.0.min.js" />
     <Content Include="JavaScript\leaflet-sidebar.js" />
     <Content Include="JavaScript\MainPageMap.js" />
-    <Content Include="Pictures\example-Image.png" />
-    <Content Include="Photos\default_picture.png" />
-    <Content Include="Photos\green_upvote.png" />
+    <Content Include="Images\default_picture.png" />
+    <Content Include="Images\green_upvote.png" />
     <Content Include="Web.config" />
     <Content Include="WebPages\Login.aspx" />
     <Content Include="WebPages\MainPage.aspx" />
@@ -200,7 +199,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Images\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
