TXDistrict1.aspx - Converted all buttons to Imagebutton. - added imageurls RepPage.css - Tweaked upvote and downvote css TXDistrict1.aspx.cs - Created validation for upvote and downvote image change.

--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -123,6 +123,11 @@
     <Content Include="DB\ScriptofVoxPopuliv2.sql" />
     <Content Include="Districts\TexasD1.txt" />
     <Content Include="Global.asax" />
+    <Content Include="Images\bill-default.png" />
+    <Content Include="Images\downvote-clear.png" />
+    <Content Include="Images\downvote-clicked.png" />
+    <Content Include="Images\upvote-png-clear.png" />
+    <Content Include="Images\upvote-png-green.png" />
     <Content Include="Recaptcha.dll" />
     <Content Include="WebPages\getBill.php" />
     <Content Include="WebPages\getPic.php" />
