Voting Functions nearly done!!

--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -127,6 +127,7 @@
     <Content Include="Images\downvote-clear.png" />
     <Content Include="Images\downvote-clicked.png" />
     <Content Include="Images\louieg.jpg" />
+    <Content Include="Images\patriotimage.jpg" />
     <Content Include="Images\upvote-png-clear.png" />
     <Content Include="Images\upvote-png-green.png" />
     <Content Include="Recaptcha.dll" />
