Slight CSS change and added Logo To files

--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -127,6 +127,7 @@
     <Content Include="Images\bill-default.png" />
     <Content Include="Images\downvote-clear.png" />
     <Content Include="Images\downvote-clicked.png" />
+    <Content Include="Images\logo1.PNG" />
     <Content Include="Images\upvote-png-clear.png" />
     <Content Include="Images\upvote-png-green.png" />
     <Content Include="JavaScript\RepPage.js" />
