--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -162,6 +162,24 @@
     <Content Include="WebPages\TX13.aspx" />
     <Content Include="WebPages\TX14.aspx" />
     <Content Include="WebPages\TX15.aspx" />
+    <Content Include="WebPages\TX16.aspx" />
+    <Content Include="WebPages\TX17.aspx" />
+    <Content Include="WebPages\TX18.aspx" />
+    <Content Include="WebPages\TX19.aspx" />
+    <Content Include="WebPages\TX20.aspx" />
+    <Content Include="WebPages\TX21.aspx" />
+    <Content Include="WebPages\TX22.aspx" />
+    <Content Include="WebPages\TX23.aspx" />
+    <Content Include="WebPages\TX24.aspx" />
+    <Content Include="WebPages\TX25.aspx" />
+    <Content Include="WebPages\TX26.aspx" />
+    <Content Include="WebPages\TX27.aspx" />
+    <Content Include="WebPages\TX28.aspx" />
+    <Content Include="WebPages\TX29.aspx" />
+    <Content Include="WebPages\TX30.aspx" />
+    <Content Include="WebPages\TX31.aspx" />
+    <Content Include="WebPages\TX32.aspx" />
+    <Content Include="WebPages\TX33.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -310,6 +328,132 @@
     </Compile>
     <Compile Include="WebPages\TX15.aspx.designer.cs">
       <DependentUpon>TX15.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX16.aspx.cs">
+      <DependentUpon>TX16.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX16.aspx.designer.cs">
+      <DependentUpon>TX16.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX17.aspx.cs">
+      <DependentUpon>TX17.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX17.aspx.designer.cs">
+      <DependentUpon>TX17.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX18.aspx.cs">
+      <DependentUpon>TX18.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX18.aspx.designer.cs">
+      <DependentUpon>TX18.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX19.aspx.cs">
+      <DependentUpon>TX19.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX19.aspx.designer.cs">
+      <DependentUpon>TX19.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX20.aspx.cs">
+      <DependentUpon>TX20.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX20.aspx.designer.cs">
+      <DependentUpon>TX20.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX21.aspx.cs">
+      <DependentUpon>TX21.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX21.aspx.designer.cs">
+      <DependentUpon>TX21.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX22.aspx.cs">
+      <DependentUpon>TX22.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX22.aspx.designer.cs">
+      <DependentUpon>TX22.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX23.aspx.cs">
+      <DependentUpon>TX23.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX23.aspx.designer.cs">
+      <DependentUpon>TX23.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX24.aspx.cs">
+      <DependentUpon>TX24.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX24.aspx.designer.cs">
+      <DependentUpon>TX24.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX25.aspx.cs">
+      <DependentUpon>TX25.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX25.aspx.designer.cs">
+      <DependentUpon>TX25.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX26.aspx.cs">
+      <DependentUpon>TX26.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX26.aspx.designer.cs">
+      <DependentUpon>TX26.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX27.aspx.cs">
+      <DependentUpon>TX27.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX27.aspx.designer.cs">
+      <DependentUpon>TX27.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX28.aspx.cs">
+      <DependentUpon>TX28.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX28.aspx.designer.cs">
+      <DependentUpon>TX28.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX29.aspx.cs">
+      <DependentUpon>TX29.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX29.aspx.designer.cs">
+      <DependentUpon>TX29.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX30.aspx.cs">
+      <DependentUpon>TX30.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX30.aspx.designer.cs">
+      <DependentUpon>TX30.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX31.aspx.cs">
+      <DependentUpon>TX31.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX31.aspx.designer.cs">
+      <DependentUpon>TX31.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX32.aspx.cs">
+      <DependentUpon>TX32.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX32.aspx.designer.cs">
+      <DependentUpon>TX32.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\TX33.aspx.cs">
+      <DependentUpon>TX33.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebPages\TX33.aspx.designer.cs">
+      <DependentUpon>TX33.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
