--- a/Web.config
+++ b/Web.config
@@ -5,18 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-
-    <add name="ConnectionString" connectionString="Data Source=.\SQLEXPRESS;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="masterConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="masterConnectionString2" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=master;Integrated Security=True" providerName="System.Data.SqlClient" />
-
-    <add name="VoxPopuliConnectionString" connectionString="Data Source=LAPTOP-LPSPJ332\SQLEXPRESS;Initial Catalog=VoxPopuli;Integrated Security=True"
+    <add name="VoxPopuli2ConnectionString" connectionString="Data Source=voxpopuliserver.database.windows.net;Initial Catalog=VoxPopuli2;User ID=voxpopuliserveradmin;Password=Admin001"
       providerName="System.Data.SqlClient" />
-    <add name="VoxPopuliConnectionString2" connectionString="Data Source=LAPTOP-LPSPJ332\SQLEXPRESS;Initial Catalog=VoxPopuli;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-    <add name="VoxPopuli_ConnectionString" connectionString="Data Source=LAPTOP-LPSPJ332\SQLEXPRESS;Initial Catalog=VoxPopuli;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
-
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
