--- a/Web.config
+++ b/Web.config
@@ -18,6 +18,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
+    <customErrors mode="Off"/>
     <httpRuntime targetFramework="4.7.2" />
     <pages>
       <namespaces>
