--- a/VoxPopuli.csproj
+++ b/VoxPopuli.csproj
@@ -110,14 +110,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\ScriptofVoxPopuli.sql" />
     <Content Include="CSS\Login.css" />
     <Content Include="CSS\About.css" />
     <Content Include="CSS\MainPage.css" />
     <Content Include="CSS\RepPage.css" />
     <Content Include="CSS\sidebar.css" />
     <Content Include="CSS\Register.css" />
-    <Content Include="DB\ScriptofVoxPopuliv2.sql" />
     <Content Include="Districts\TexasD1.txt" />
     <Content Include="Global.asax" />
     <Content Include="Images\background-reg.jpeg" />
@@ -507,6 +505,7 @@
     <Content Include="WebPages\RepMaster.Master" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
